--- a/March 9 2023/index.html
+++ b/March 9 2023/index.html
@@ -69,7 +69,7 @@
 </div>
 <div class="service-content">
     <div class="row">
-        <i class='bx bx-cast'></i>
+        <i class='bx bxl-html5' ></i> <i class='bx bxl-css3' ></i> <i class='bx bxl-javascript'></i>
 <h3>Web Development</h3>
 <p>
     Full Stack Web Development-
@@ -78,29 +78,29 @@
 </p>
     </div>
     <div class="row">
-        <i class='bx bx-cast'></i>
+        <i class='bx bxl-google-cloud'></i>
 <h3>Data Migration, Support and Maintenance</h3>
 <p>
     Be it migrating crucial data, resolving post-deployment queries or regular maintenance, obtain watertight solutions from my expertise.         
 </p>
     </div>
     <div class="row">
-        <i class='bx bx-cast'></i>
+        <i class='bx bxl-drupal'></i>
 <h3>CMS Design and Development</h3>
 <p>
     With my comprehensive  development services, you can set up best-in-class, responsive and robust content management systems for your business.         
 </p>
     </div>
     <div class="row">
-        <i class='bx bx-cast'></i>
+        <i class='bx bxl-adobe'></i>
 <h3>Product-Visualizations</h3>
 <p>
-    Create Visualizations and Animations in 3D such as Advertising ,Industrial Films and Characteranimations for broad fields of application, such as, Web, TV, Print, Trade Fairs or Point-of-Sale.
+    Create Visualizations and Animations in 3D such as Advertising ,Industrial Films and Character animations for broad fields of application, such as, Web, TV, Print, Trade Fairs or Point-of-Sale.
          
 </p>
     </div>
     <div class="row">
-        <i class='bx bx-cast'></i>
+        <i class='bx bxl-blender' ></i>
 <h3>3D/2D Visual Developement(BLENDER)</h3>
 <p>
     I am focused on complex modelling, sculpting, texturing and lookdev, both hard-surface and organic.
@@ -110,7 +110,7 @@
 </p>
     </div>
     <div class="row">
-        <i class='bx bx-cast'></i>
+    </i><i class='bx bxl-django' ></i><i class='bx bxl-angular' ></i><i class='bx bxl-nodejs' ></i>
 <h3>Andriod Mobile App Development</h3>
 <p>
 Android development services include custom mobile apps, mobile SDKs and utilities development. Developed apps with the back-end web service and corporate systems. I offer:
@@ -146,7 +146,7 @@ Continuous Android app support and evolution.
 <img src="img/one.png">
 <p4 class="pix">Bank Applications</p>
 <h5>
-Above is a sample of a Mobile and Web Application for created for Max Bank International
+Above is a sample of a Mobile and Web Application created for Max International Bank
 </h5>
 </div>
 
@@ -154,7 +154,7 @@ Above is a sample of a Mobile and Web Application for created for Max Bank Inter
     <img src="img/two.jpg">
     <p4 class="pix">Employee Management System</p>
     <h5>
-    Above is a sample of an Employee Management Desktop Application created for Chevron Oil
+    Above is a sample of an Employee Management Desktop Application created for Volta Lake Transport Company Ghana
     </h5>
     </div>
 
